# brick

./: .gitignore  Cargo.toml  README.md  a.brick  bugs  example-game.brick  example.brick  grammar.txt  index.html  install-wasmc-build.sh  language-roadmap.md  language-tour.md  main.brick  stdio.brick  test.js  todo
brick/: Cargo.toml  example.brick  math.brick  test.js
brick-browser-runtime/: Cargo.toml
brick-browser-runtime/src/: lib.rs
brick-fmt/: Cargo.toml
brick-fmt/src/: lib.rs  main.rs
brick-fmt/tests/: data.rs  fmt_data.rs
brick-ld/: Cargo.toml
brick-ld/src/: lib.rs
brick-ld/tests/: wasm_data.rs
brick-lsp/: Cargo.toml  attach-lsp.lua
brick-lsp/src/: goto_definition.rs  lib.rs  main.rs  server_state.rs
brick-lsp/tests/: basic.rs
brick-runtime/: Cargo.toml
brick-runtime/src/: lib.rs
brick-wasm-backend/: Cargo.toml  example.brick
brick-wasm-backend/src/: function_bodies.rs  function_headers.rs  indirect_function_table.rs  lib.rs  main.rs  runtime.rs
brick-wasm-backend/tests/: data.rs
brick-wasmc/: Cargo.toml
brick-wasmc/src/: main.rs
brick-wasmtime/: Cargo.toml
brick-wasmtime/src/: lib.rs  main.rs
brick-wasmtime/tests/: data.rs  wasm_data.rs
brick/src/: borrowck.rs  declaration_context.rs  diagnostic.rs  generate_destructors.rs  hir.rs  id.rs  interpreter.rs  intrinsics.rs  lib.rs  linear_ir.rs  main.rs  multi_error.rs  parser.rs  provenance.rs  runtime.rs  tokenizer.rs  type_validator.rs  typecheck.rs
brick/src/borrowck/: autoclone.rs  check_borrows.rs  control_flow_graph.rs  detect_moves.rs  drop_points.rs
brick/src/hir/: auto_deref_dot.rs  auto_numeric_cast.rs  constant_inlining.rs  coroutines.rs  create_temp_vars_for_lvalues.rs  discard_unused_values.rs  interface_conversion_pass.rs  lower.rs  rewrite_associated_functions.rs  simplify_sequence_expressions.rs  unions.rs  widen_null.rs
brick/src/linear_ir/: generator_local_storage.rs
brick/src/typecheck/: error.rs  resolve.rs  types.rs
brick/tests/: arithmetic.rs  assignment.rs  collection.rs  comparison.rs  control_flow.rs  core_data.rs  coroutine.rs  data.rs  functions.rs  interface.rs  nullability.rs  union.rs
brickc/: Cargo.toml  example.brick
brickc/src/: function_bodies.rs  function_headers.rs  lib.rs  main.rs  runtime.rs
brickc/tests/: data.rs
data-test-driver/: Cargo.toml
data-test-driver/src/: lib.rs
runtime-binary/: Cargo.toml  build.rs
runtime-binary/src/: lib.rs
rust-wasm-exporter/: Cargo.toml
rust-wasm-exporter/src/: lib.rs  rust-wasm-lib-test.wasm
src/: analyzer.rs  arena.rs  backend.rs  borrowck.rs  hir.rs  id.rs  imports.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  linear_interpreter.rs  linear_ir.rs  main.rs  parser.rs  provenance.rs  runtime.rs  scan.rs  tokenizer.rs  tree.rs  typecheck.rs
src/analyzer/: control_flow_graph.rs  resolve.rs  resolve_type_names.rs  scan.rs  typecheck.rs
src/backend/: debug.rs
src/borrowck/: check_borrows.rs  control_flow_graph.rs  detect_moves.rs  drop_points.rs
src/hir/: auto_deref_dot.rs  auto_numeric_cast.rs  coroutines.rs  interface_conversion_pass.rs  lower.rs  rewrite_associated_functions.rs  simplify_sequence_expressions.rs  widen_null.rs
src/ir/: interface_conversion_pass.rs  lower.rs  rewrite_associated_functions.rs
src/linear_ir/: generator_local_storage.rs
src/typecheck/: control_flow_graph.rs  resolve.rs
tests/: arithmetic.rs  array.rs  assignment.rs  basics.rs  borrows.rs  collection.rs  comparison.rs  control_flow.rs  coroutine.rs  extern.rs  fibonacci.rs  functions.rs  interface.rs  json.rs  nullability.rs  pointers.rs  references.rs  structs.rs  union.rs
tests/arithmetic/: auto_cast.brick  basic_precedence.brick  float_cast.brick  float_plus_equals_int.brick  parens.brick
tests/assignment/: assignment.brick  conditional.brick  illegal_lvalue.skip  illegal_type_hint.skip  multiple_variables.brick  numeric_assignment.brick  numeric_assignment_declaration.brick  type_hint.brick
tests/borrowck/: assignment_renews_value.brick  basic_borrow.brick  basic_cell.brick  basic_moves.brick  borrow_across_while.brick  borrow_field_of_borrow.brick  borrow_field_of_borrow_invalidated.brick  borrow_field_of_borrow_param.brick  children_dropped.brick  children_dropped_with_drop_impl.brick  conditional_drop.brick  conditional_drop_loop.brick  conditional_move.brick  custom_drop.brick  custom_drop_order.brick  custom_drop_return_position.brick  disjoint_borrow_path_call.brick  disjoint_borrow_paths.brick  disjoint_borrow_paths_mixed.brick  disjoint_shared_and_mutable.brick  double_mutable_borrow.brick  double_mutable_ref_function_call.brick  double_shared_ref_function_call.brick  drop_after_reassign.brick  drop_after_references_die.brick  drop_temporary.brick  function_call_mutable_ref_invalidates.brick  illegal_field_mutation_via_ref.brick  illegal_mutation_of_ref.brick  illegal_rebind_reference.brick  illegal_reference_assignment.brick  immutable_ref_invalidates_unique.brick  index_paths.brick  mixed_existing_borrow_and_parameter.brick  move_in_diverging_loop.brick  move_in_loop.brick  move_in_return.brick  move_invalidates_immutable_borrows.brick  (+14 more)
tree-sitter-brick/: Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  highlights.scm  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-brick/bindings/c/: tree-sitter-brick.pc.in
tree-sitter-brick/bindings/go/: binding.go  binding_test.go
tree-sitter-brick/bindings/node/: binding.cc
tree-sitter-brick/bindings/python/tests/: test_binding.py
tree-sitter-brick/bindings/python/tree_sitter_brick/: __init__.py  binding.c
tree-sitter-brick/bindings/rust/: build.rs  lib.rs
tree-sitter-brick/bindings/swift/TreeSitterBrick/: brick.h
tree-sitter-brick/bindings/swift/TreeSitterBrickTests/: TreeSitterBrickTests.swift
tree-sitter-brick/src/: grammar.json  node-types.json  parser.c
tree-sitter-brick/test/corpus/: assignment.txt  comments.txt  function_definition.txt  identifiers.txt  interfaces.txt  structs.txt  top_level.txt  unions.txt
tree-sitter-brick/tests/: compiler_suite.rs
(+742 files in other folders)
