[package]
name = "brick"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
async-recursion = "1.0.5"
petgraph = "0.6.4"
rayon = "1.8.0"
# gimli = "0.27.0"
thiserror = "1.0"
typed-arena = "2.0.2"
# wasm-encoder = "0.20.0"
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }

[dev-dependencies]
anyhow = "1.0"
archipelago_rs = { path = "../archipelago_rs" }
# wasmtime = "3.0.0"
matches = "0.1.9"

[lib]
name = "brick"
path = "src/lib.rs"

[[bin]]
name = "brick"
path = "src/main.rs"
