[package]
name = "brick-browser-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#panic = 'abort'

[lib]
crate-type = ["cdylib"]

[dependencies]
brick-runtime = { path = "../brick-runtime" }

