[package]
name = "brick-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brick = { path = "../brick" }
typed-arena = "2.0.2"

[dev-dependencies]
anyhow = "1.0"
data-test-driver = { path = "../data-test-driver" }

[lib]
name = "brick_fmt"
path = "src/lib.rs"

[[bin]]
name = "brick_fmt"
path = "src/main.rs"
