[package]
name = "brick-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
brick = { path = "../brick" }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
serde = "1.0.197"
serde_json = "1.0.115"
