[package]
name = "brick-wasm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-encoder = "0.206.0"
brick = { path = "../brick" }

[lib]
name = "brick_wasm_backend"
path = "src/lib.rs"

[[bin]]
name = "brick_wasmc"
path = "src/main.rs"
