[package]
name = "brick-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wasmtime = "20"
brick-wasm-backend = { path = "../brick-wasm-backend" }
brick-runtime = { path = "../brick-runtime" }
sdl2 = { version = "0.36.0", features = ["bundled"] }

[dev-dependencies]
data-test-driver = { path = "../data-test-driver" }

[lib]
name = "brick_wasmtime"
path = "src/lib.rs"

[[bin]]
name = "brick_wasmtime"
path = "src/main.rs"
