[package]
name = "brick-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wasmtime = "23"
runtime-binary = { path = "../runtime-binary" }

[dev-dependencies]
brick = { path = "../brick" }
brick-wasm-backend = { path = "../brick-wasm-backend" }
data-test-driver = { path = "../data-test-driver" }

