[package]
name = "rust-wasm-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.63"
wasm-encoder = { version = "0.215.0", features = ["wasmparser"] }
wasmparser = "0.215.0"

[dev-dependencies]
wabt = "0.10.0"
